packages/typescript/test/fixtures/syntax-error/missing-type.ts
var a: ;
console.log('hello world');
